--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>petite-svelte: demo</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; padding: 2rem; }
-      .card { border: 1px solid #e5e7eb; border-radius: 0.5rem; padding: 1rem; max-width: 420px; }
-      button { padding: 0.5rem 0.75rem; border: 1px solid #11182722; border-radius: 0.375rem; background: #111827; color: white; cursor: pointer; }
-    </style>
-  </head>
-  <body>
-    <h1>petite-svelte demo</h1>
 
-    <div class="card" ps-data>
-      <p id="status">Open the console to see init log.</p>
-    </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>sparkle: examples</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
 
-    <script type="module">
-      import { init } from './petite-svelte.js';
-      init();
-    </script>
-  </body>
+<body class="min-h-dvh bg-white text-gray-900">
+  <main class="mx-auto max-w-3xl p-6 space-y-8">
+    <header class="space-y-2">
+      <h1 class="text-2xl font-bold">Sparkle Examples</h1>
+      <p class="text-sm text-gray-600">A growing list of small demos. Open one to try it locally.</p>
+    </header>
+
+    <section>
+      <ul class="grid gap-3 sm:grid-cols-2">
+        <li>
+          <a href="/counter.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Counter</div>
+            <div class="text-sm text-gray-600">Basic component API (use, template id, props).</div>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="text-xs text-gray-500">Served by Bun dev server. Edit this page to add more links as we build them.</footer>
+  </main>
+
+  <script type="module">
+    import { init } from './sparkle.js';
+    // No scopes on index yet, but keep consistent boot
+    init();
+  </script>
+</body>
+
 </html>
