feat: enhance event handling and attribute bindings

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,12 @@
             <div class="text-sm text-gray-600">Basic component API (use, template id, props).</div>
           </a>
         </li>
+        <li>
+          <a href="/dropdown.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Dropdown</div>
+            <div class="text-sm text-gray-600">Simple dropdown using component state and events.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
