feat: add modal component and enhance reactive state management

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,12 @@
             <div class="text-sm text-gray-600">Simple dropdown using component state and events.</div>
           </a>
         </li>
+        <li>
+          <a href="/modal.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Modal</div>
+            <div class="text-sm text-gray-600">Overlay with outside click + Escape close.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
