feat: improve modal outside click handling and add new components

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,18 @@
             <div class="text-sm text-gray-600">Overlay with outside click + Escape close.</div>
           </a>
         </li>
+        <li>
+          <a href="/accordion.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Accordion</div>
+            <div class="text-sm text-gray-600">Accessible accordion with smooth slide animation.</div>
+          </a>
+        </li>
+        <li>
+          <a href="/toggle.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Toggle</div>
+            <div class="text-sm text-gray-600">iOS-style switch with hidden input.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
