--- a/app/modal.html
+++ b/app/modal.html
@@ -20,14 +20,14 @@
     <template id="modal">
       <!-- Backdrop and panel wrapper listens for outside click & Escape -->
       <div class="fixed inset-0 z-50 flex items-center justify-center"
-           onclick="$event.outside && (open = false)"
            onkeydown="($event.key==='Escape') && (open=false)"
            tabindex="0">
         <!-- Backdrop -->
         <div class="absolute inset-0 bg-black/50"></div>
 
-        <!-- Panel -->
-        <div class="relative mx-4 w-full max-w-md rounded-lg bg-white p-6 shadow-lg">
+        <!-- Panel (outside handler bound relative to this element) -->
+        <div class="relative mx-4 w-full max-w-md rounded-lg bg-white p-6 shadow-lg"
+             onclick="$event.outside && open && (open=false)">
           <div class="flex items-start justify-between gap-4">
             <h2 class="text-lg font-semibold">{title}</h2>
             <button class="rounded p-1 text-gray-500 hover:text-gray-700" onclick="open=false" aria-label="Close">
