feat: add form input bindings and conditional rendering

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,12 @@
             <div class="text-sm text-gray-600">iOS-style switch with hidden input.</div>
           </a>
         </li>
+        <li>
+          <a href="/forms.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Forms</div>
+            <div class="text-sm text-gray-600">Text, textarea, checkbox, radio, select, range/number.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
