feat: add list iteration with @each directive

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,12 @@
             <div class="text-sm text-gray-600">Text, textarea, checkbox, radio, select, range/number.</div>
           </a>
         </li>
+        <li>
+          <a href="/list.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">List + Search</div>
+            <div class="text-sm text-gray-600">Filter with :value, @if/@else, and @each.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
