feat: enhance conditional rendering and event handling

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,12 @@
             <div class="text-sm text-gray-600">Filter with :value, @if/@else, and @each.</div>
           </a>
         </li>
+        <li>
+          <a href="/tabs.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Tabs</div>
+            <div class="text-sm text-gray-600">Keyboard-accessible tabs with ARIA.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
