feat: add todo list and fetch demos, improve reactive bindings

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,18 @@
             <div class="text-sm text-gray-600">Keyboard-accessible tabs with ARIA.</div>
           </a>
         </li>
+        <li>
+          <a href="/todo.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Todo List</div>
+            <div class="text-sm text-gray-600">Add/toggle/delete, filters, computed counts.</div>
+          </a>
+        </li>
+        <li>
+          <a href="/fetch.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Async Fetch + Loading</div>
+            <div class="text-sm text-gray-600">Loading/error states, list rendering, retry.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
