--- a/app/list.html
+++ b/app/list.html
@@ -52,10 +52,7 @@
       }
     </script>
 
-    <script type="module">
-      import { init } from './sparkle.js'
-      init()
-    </script>
+    <script type="module" src="./sparkle.js" defer init></script>
   </main>
 </body>
 </html>
