--- a/app/counter.html
+++ b/app/counter.html
@@ -72,10 +72,7 @@
     }
   </script>
 
-  <script type="module">
-    import { init } from './sparkle.js';
-    init();
-  </script>
+  <script type="module" src="./sparkle.js" defer init></script>
 </body>
 
 </html>
