feat: improve reactive proxy handling and add new demo pages

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,18 @@
             <div class="text-sm text-gray-600">Single/multiple selects bound to state.</div>
           </a>
         </li>
+        <li>
+          <a href="/store.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Global Store + Modifiers</div>
+            <div class="text-sm text-gray-600">$store sharing across components; .prevent/.stop/.once.</div>
+          </a>
+        </li>
+        <li>
+          <a href="/datepicker.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">Datepicker</div>
+            <div class="text-sm text-gray-600">Sparkle + date-fns + Popper; keyboard and outside click.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
