feat: rename project from Sparkle to Impetus

--- a/app/datepicker.html
+++ b/app/datepicker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: datepicker</title>
+  <title>Impetus: datepicker</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/date-fns@4.1.0/cdn.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
@@ -15,7 +15,7 @@
 <body class="min-h-dvh bg-white text-gray-900">
   <main class="mx-auto max-w-xl p-6 space-y-6">
     <header class="space-y-2">
-      <h1 class="text-2xl font-bold">Datepicker (Sparkle + date-fns + Popper)</h1>
+      <h1 class="text-2xl font-bold">Datepicker (Impetus + date-fns + Popper)</h1>
       <p class="text-sm text-gray-600">A flatpickr-like datepicker with keyboard and outside click to close.</p>
     </header>
 
@@ -203,8 +203,7 @@
         }
       }
     </script>
-
-    <script type="module" src="./sparkle.js" defer init></script>
+    <script type="module" src="./impetus.js" defer init></script>
   </main>
 </body>
 </html>
