--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: examples</title>
+  <title>Impetus: examples</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="min-h-dvh bg-white text-gray-900">
   <main class="mx-auto max-w-3xl p-6 space-y-8">
     <header class="space-y-2">
-      <h1 class="text-2xl font-bold">Sparkle Examples</h1>
+      <h1 class="text-2xl font-bold">Impetus Examples</h1>
       <p class="text-sm text-gray-600">A growing list of small demos. Open one to try it locally.</p>
     </header>
 
@@ -98,7 +98,7 @@
         <li>
           <a href="/datepicker.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
             <div class="font-semibold">Datepicker</div>
-            <div class="text-sm text-gray-600">Sparkle + date-fns + Popper; keyboard and outside click.</div>
+            <div class="text-sm text-gray-600">Impetus + date-fns + Popper; keyboard and outside click.</div>
           </a>
         </li>
       </ul>
@@ -107,7 +107,7 @@
     <footer class="text-xs text-gray-500">Served by Bun dev server. Edit this page to add more links as we build them.</footer>
   </main>
 
-  <script type="module" src="./sparkle.js" defer init></script>
+  <script type="module" src="./impetus.js" defer init></script>
 </body>
 
 </html>
