--- a/app/select2.html
+++ b/app/select2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: select2</title>
+  <title>Impetus: select2</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -13,7 +13,7 @@
   <main class="mx-auto max-w-3xl p-6 space-y-8">
     <header class="space-y-2">
       <h1 class="text-2xl font-bold">Select2</h1>
-      <p class="text-sm text-gray-600">Single and multiple selects bound to Sparkle state.</p>
+      <p class="text-sm text-gray-600">Single and multiple selects bound to Impetus state.</p>
     </header>
 
     <!-- Host -->
@@ -80,7 +80,7 @@
       }
     </script>
 
-    <script type="module" src="./sparkle.js" defer init></script>
+    <script type="module" src="./impetus.js" defer init></script>
   </main>
 </body>
 </html>
