--- a/app/store.html
+++ b/app/store.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: global store + modifiers</title>
+  <title>Impetus: global store + modifiers</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="min-h-dvh bg-white text-gray-900">
@@ -63,7 +63,7 @@
       }
     </script>
 
-    <script type="module" src="./sparkle.js" defer init></script>
+    <script type="module" src="./impetus.js" defer init></script>
   </main>
 </body>
 </html>
