--- a/app/todo.html
+++ b/app/todo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: todo</title>
+  <title>Impetus: todo</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="min-h-dvh bg-white text-gray-900">
@@ -81,7 +81,7 @@
           this.draft = ''
           this.filter = 'all'
           this.todos = [
-            { text: 'Learn Sparkle', done: false },
+            { text: 'Learn Impetus', done: false },
             { text: 'Build examples', done: true },
           ]
         }
@@ -113,7 +113,7 @@
     </script>
 
     <script type="module">
-      import { init } from './sparkle.js'
+      import { init } from './impetus.js'
       init()
     </script>
   </main>
