--- a/app/accordion.html
+++ b/app/accordion.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: accordion</title>
+  <title>Impetus: accordion</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="min-h-dvh bg-white text-gray-900">
   <main class="mx-auto max-w-3xl p-6 space-y-8">
     <header class="space-y-2">
       <h1 class="text-2xl font-bold">Accordion</h1>
-      <p class="text-sm text-gray-600">Accessible accordion using Sparkle components.</p>
+      <p class="text-sm text-gray-600">Accessible accordion using Impetus components.</p>
     </header>
 
     <!-- Host -->
@@ -92,7 +92,7 @@
     </script>
 
     <script type="module">
-      import { init } from './sparkle.js'
+      import { init } from './impetus.js'
       init()
     </script>
   </main>
