--- a/app/counter.html
+++ b/app/counter.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: demo</title>
+  <title>Impetus: demo</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <style>
     body {
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <h1>sparkle demo</h1>
+  <h1>Impetus counter</h1>
 
   <!-- Hosts using the new API -->
   <div use="Counter" class="card" props='{"start": 1}'></div>
@@ -72,7 +72,7 @@
     }
   </script>
 
-  <script type="module" src="./sparkle.js" defer init></script>
+  <script type="module" src="./impetus.js" defer init></script>
 </body>
 
 </html>
