--- a/app/dropdown.html
+++ b/app/dropdown.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>sparkle: dropdown</title>
+    <title>Impetus: dropdown</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
@@ -12,7 +12,7 @@
     <main class="mx-auto max-w-3xl p-6 space-y-8">
         <header class="space-y-2">
             <h1 class="text-2xl font-bold">Dropdown</h1>
-            <p class="text-sm text-gray-600">Simple dropdown using Sparkle components (use + template).</p>
+            <p class="text-sm text-gray-600">Simple dropdown using Impetus components (use + template).</p>
         </header>
 
         <!-- Host -->
@@ -71,7 +71,7 @@
         </script>
 
         <script type="module">
-            import { init } from './sparkle.js'
+            import { init } from './impetus.js'
             init()
         </script>
     </main>
