--- a/app/fetch.html
+++ b/app/fetch.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: fetch</title>
+  <title>Impetus: fetch</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
@@ -83,7 +83,7 @@
     </script>
 
     <script type="module">
-      import { init } from './sparkle.js'
+      import { init } from './impetus.js'
       init()
     </script>
   </main>
