--- a/app/modal.html
+++ b/app/modal.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: modal</title>
+  <title>Impetus: modal</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="min-h-dvh bg-white text-gray-900">
   <main class="mx-auto max-w-3xl p-6 space-y-8">
     <header class="space-y-2">
       <h1 class="text-2xl font-bold">Modal</h1>
-      <p class="text-sm text-gray-600">Simple modal using Sparkle components (use + template).</p>
+      <p class="text-sm text-gray-600">Simple modal using Impetus components (use + template).</p>
     </header>
 
     <!-- Host -->
@@ -85,7 +85,7 @@
     </script>
 
     <script type="module">
-      import { init } from './sparkle.js'
+      import { init } from './impetus.js'
       init()
     </script>
   </main>
