--- a/app/tabs.html
+++ b/app/tabs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: tabs</title>
+  <title>Impetus: tabs</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="min-h-dvh bg-white text-gray-900">
@@ -79,7 +79,7 @@
     </script>
 
     <script type="module">
-      import { init } from './sparkle.js'
+      import { init } from './impetus.js'
       init()
     </script>
   </main>
