--- a/app/tooltip.html
+++ b/app/tooltip.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>sparkle: tooltip</title>
+  <title>Impetus: tooltip</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
   <!-- Development -->
@@ -60,7 +60,7 @@
       }
     </script>
 
-    <script type="module" src="./sparkle.js" defer init></script>
+    <script type="module" src="./impetus.js" defer init></script>
   </main>
 </body>
 </html>
