--- a/app/forms.html
+++ b/app/forms.html
@@ -102,7 +102,7 @@
         <div>
           <button type="button" class="rounded bg-gray-900 px-4 py-2 text-sm font-medium text-white hover:bg-gray-800"
                   onclick="submitted = true">Submit</button>
-          <span class="ml-2 text-sm text-black { submitted ? 'inline' : 'hidden' }">Submitted!</span>
+          <span class="ml-2 text-sm { submitted ? '' : 'hidden' }">Submitted!</span>
         </div>
       </form>
     </template>
