--- a/app/modal.html
+++ b/app/modal.html
@@ -13,59 +13,53 @@
       <p class="text-sm text-gray-600">Simple modal using Impetus components (use + template).</p>
     </header>
 
-    <!-- Host -->
-    <div use="ModalDemo"></div>
-
-    <!-- Modal Template -->
-    <template id="modal">
-      <!-- Backdrop and panel wrapper listens for outside click & Escape -->
-      <div class="fixed inset-0 z-50 flex items-center justify-center"
-           onkeydown="($event.key==='Escape') && (open=false)"
-           tabindex="0">
-        <!-- Backdrop -->
-        <div class="absolute inset-0 bg-black/50"></div>
-
-        <!-- Panel (outside handler bound relative to this element) -->
-        <div class="relative mx-4 w-full max-w-md rounded-lg bg-white p-6 shadow-lg"
-             onclick="$event.outside && open && (open=false)">
-          <div class="flex items-start justify-between gap-4">
-            <h2 class="text-lg font-semibold">{title}</h2>
-            <button class="rounded p-1 text-gray-500 hover:text-gray-700" onclick="open=false" aria-label="Close">
-              <svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M6.225 4.811a1 1 0 011.414 0L12 9.172l4.361-4.361a1 1 0 111.414 1.414L13.414 10.586l4.361 4.361a1 1 0 01-1.414 1.414L12 12l-4.361 4.361a1 1 0 01-1.414-1.414l4.361-4.361-4.361-4.361a1 1 0 010-1.414z" clip-rule="evenodd"/>
-              </svg>
-            </button>
-          </div>
-
-          <div class="mt-3 text-sm text-gray-700">
-            <p>{content}</p>
-          </div>
-
-          <div class="mt-6 flex justify-end gap-2">
-            <button class="rounded bg-gray-100 px-3 py-2 text-sm hover:bg-gray-200" onclick="open=false">Cancel</button>
-            <button class="rounded bg-gray-900 px-3 py-2 text-sm text-white hover:bg-gray-800" onclick="confirm()">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </template>
-
-    <!-- Trigger Template -->
-    <template id="modal-demo">
+    <!-- Host with inline template -->
+    <div use="ModalDemo">
       <div class="space-y-4">
         <button class="rounded bg-gray-900 px-4 py-2 text-sm font-medium text-white hover:bg-gray-800" onclick="openModal()">
           Open modal
         </button>
         <!-- Render modal when open -->
         <div class="{ open ? '' : 'hidden' }">
-          <div use="Modal" inherit></div>
+          <!-- Modal content with inline template using inheritance -->
+          <div use="Modal" inherit>
+            <!-- Backdrop and panel wrapper listens for outside click & Escape -->
+            <div class="fixed inset-0 z-50 flex items-center justify-center"
+                 onkeydown="($event.key==='Escape') && (open=false)"
+                 tabindex="0">
+              <!-- Backdrop -->
+              <div class="absolute inset-0 bg-black/50"></div>
+
+              <!-- Panel (outside handler bound relative to this element) -->
+              <div class="relative mx-4 w-full max-w-md rounded-lg bg-white p-6 shadow-lg"
+                   onclick="$event.outside && open && (open=false)">
+                <div class="flex items-start justify-between gap-4">
+                  <h2 class="text-lg font-semibold">{title}</h2>
+                  <button class="rounded p-1 text-gray-500 hover:text-gray-700" onclick="open=false" aria-label="Close">
+                    <svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M6.225 4.811a1 1 0 011.414 0L12 9.172l4.361-4.361a1 1 0 111.414 1.414L13.414 10.586l4.361 4.361a1 1 0 01-1.414 1.414L12 12l-4.361 4.361a1 1 0 01-1.414-1.414l4.361-4.361-4.361-4.361a1 1 0 010-1.414z" clip-rule="evenodd"/>
+                    </svg>
+                  </button>
+                </div>
+
+                <div class="mt-3 text-sm text-gray-700">
+                  <p>{content}</p>
+                </div>
+
+                <div class="mt-6 flex justify-end gap-2">
+                  <button class="rounded bg-gray-100 px-3 py-2 text-sm hover:bg-gray-200" onclick="open=false">Cancel</button>
+                  <button class="rounded bg-gray-900 px-3 py-2 text-sm text-white hover:bg-gray-800" onclick="confirm()">Confirm</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </template>
+    </div>
 
     <!-- Logic -->
     <script>
       class ModalDemo {
-        static template = 'modal-demo'
         constructor() {
           this.open = false
           this.title = 'Confirm action'
@@ -75,9 +69,8 @@
         confirm() { this.open = false }
       }
 
-      // The modal content uses properties from the same instance
+      // The modal content uses properties from the same instance via inheritance
       class Modal {
-        static template = 'modal'
         constructor(props = {}) {
           // This class is optional if you want a separate instance. Here we rely on ModalDemo properties.
         }
