--- a/app/counter.html
+++ b/app/counter.html
@@ -34,12 +34,23 @@
   <h1>Impetus counter</h1>
 
   <!-- Hosts using inline components -->
-  <div use="Counter" class="card" props='{"start": 1}'>
+  <div
+    scope="{
+      count: 0, 
+      max: 5,
+      inc() { 
+        if (this.count < this.max) this.count++; 
+      }
+    }"
+    >
     <div class="max-w-sm rounded-lg border border-gray-200 p-4 space-y-3">
-      <p class="text-lg font-semibold">Count: {count}</p>
+      <p class="text-lg font-semibold" title={count}>Count: {count}</p>
       <div class="flex items-center gap-2">
-        <button class="px-3 py-2 rounded bg-gray-900 text-white disabled:opacity-50" onclick="inc()"
-          disabled="count >= max">+</button>
+        <button 
+          onclick="inc()"
+          class="px-3 py-2 rounded bg-gray-900 text-white disabled:opacity-50" 
+          disabled="count >= max"
+        >+</button>
       </div>
     </div>
   </div>
