--- a/app/counter.html
+++ b/app/counter.html
@@ -44,7 +44,7 @@
     }"
     >
     <div class="max-w-sm rounded-lg border border-gray-200 p-4 space-y-3">
-      <p class="text-lg font-semibold" title={count}>Count: {count}</p>
+      <p class="text-lg font-semibold">Count: {count}</p>
       <div class="flex items-center gap-2">
         <button 
           onclick="inc()"
