feat: add shorthand component mounting syntax with kebab-case

--- a/app/counter.html
+++ b/app/counter.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   
-  <div use="FancyCounter" class="card">
+  <div use-fancy-counter class="card" start="2">
     <div class="max-w-sm rounded-lg border border-gray-200 p-4 space-y-3">
       <p class="text-lg font-semibold">Fancy Count: {count}</p>
       <div class="flex items-center gap-2">
