--- a/app/todo.html
+++ b/app/todo.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Impetus: todo</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body class="min-h-dvh bg-white text-gray-900">
   <main class="mx-auto max-w-3xl p-6 space-y-8">
     <header class="space-y-2">
@@ -19,26 +21,26 @@
         <!-- Input -->
         <div class="flex gap-2">
           <input type="text" placeholder="What needs to be done?"
-                 class="w-full rounded border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400"
-                 :value="draft"
-                 oninput="draft=$event.target.value"
-                 onkeydown="($event.key==='Enter' && draft.trim()) ? (add(), $event.preventDefault()) : null" />
+            class="w-full rounded border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400"
+            :value="draft" 
+            onkeydown="$event.prevent.enter && (draft.trim() && add())" 
+          />
           <button class="rounded bg-gray-900 px-3 py-2 text-sm text-white hover:bg-gray-800"
-                  onclick="draft.trim() && (add(), null)">Add</button>
+            onclick="draft.trim() && (add(), null)">Add</button>
         </div>
 
         <!-- Filters -->
         <div class="flex items-center justify-between text-sm">
           <div class="flex gap-2">
             <button type="button"
-                    class="rounded px-2 py-1 { filter==='all' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
-                    onclick="filter='all'">All</button>
+              class="rounded px-2 py-1 { filter==='all' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
+              onclick="filter='all'">All</button>
             <button type="button"
-                    class="rounded px-2 py-1 { filter==='active' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
-                    onclick="filter='active'">Active</button>
+              class="rounded px-2 py-1 { filter==='active' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
+              onclick="filter='active'">Active</button>
             <button type="button"
-                    class="rounded px-2 py-1 { filter==='completed' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
-                    onclick="filter='completed'">Completed</button>
+              class="rounded px-2 py-1 { filter==='completed' ? 'bg-gray-900 text-white' : 'bg-gray-100 text-gray-800' }"
+              onclick="filter='completed'">Completed</button>
           </div>
           <div class="text-gray-600">
             {remaining} of {total} remaining
@@ -49,9 +51,11 @@
         <div @if="visible.length" class="rounded border border-gray-200 bg-white">
           <ul class="divide-y divide-gray-100">
             <li @each="visible as t,i" class="flex items-center gap-3 p-3">
-              <input type="checkbox" :checked="t.done" onchange="toggle(t)" class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500" />
-              <span class="flex-1 { t.done ? 'line-through text-gray-400' : '' }">{t.text}</span>
-              <button class="rounded bg-gray-100 px-2 py-1 text-xs hover:bg-gray-200" onclick="remove(t)">Delete</button>
+              <input type="checkbox" checked="t.done" onchange="toggle(t)"
+                class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500" />
+              <span onclick="toggle(t)" class="flex-1 { t.done ? 'line-through text-gray-400' : '' }">{t.text}</span>
+              <button class="rounded bg-gray-100 px-2 py-1 text-xs hover:bg-gray-200"
+                onclick="remove(t)">Delete</button>
             </li>
           </ul>
         </div>
@@ -59,9 +63,8 @@
 
         <!-- Footer actions -->
         <div class="flex items-center justify-between text-xs text-gray-600">
-          <button class="rounded px-2 py-1 hover:bg-gray-100"
-                  @show="anyCompleted"
-                  onclick="clearCompleted()">Clear completed</button>
+          <button class="rounded px-2 py-1 hover:bg-gray-100" @show="anyCompleted" onclick="clearCompleted()">Clear
+            completed</button>
           <div class="flex items-center gap-2">
             <span class="rounded bg-gray-100 px-2 py-1">{completed} completed</span>
             <span class="rounded bg-gray-100 px-2 py-1">{remaining} active</span>
@@ -91,6 +94,7 @@
           return this.todos
         }
         add() {
+          console.log('add')
           const text = (this.draft || '').trim()
           if (!text) return
           this.todos = [...this.todos, { text, done: false }]
@@ -114,4 +118,5 @@
     </script>
   </main>
 </body>
+
 </html>
