feat: add Single File Component (SFC) support

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,12 @@
             <div class="text-sm text-gray-600">Impetus + date-fns + Popper; keyboard and outside click.</div>
           </a>
         </li>
+        <li>
+          <a href="/sfc-counter.html" class="block rounded-lg border border-gray-200 p-4 hover:bg-gray-50">
+            <div class="font-semibold">SFC Counter</div>
+            <div class="text-sm text-gray-600">Single File Component with external definition.</div>
+          </a>
+        </li>
       </ul>
     </section>
 
